--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "antd": "^4.0.4",
     "dotenv": "^8.2.0",
     "gitignore": "^0.6.0",
     "react": "16.11.0",
@@ -11,6 +12,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "rsuite": "^4.3.3",
+    "styled-components": "^5.0.1",
     "web3": "^1.2.2"
   },
   "scripts": {
