--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.7",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "gitignore": "^0.6.0",
+    "multer": "^1.4.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.1.2",
