--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.6",
     "assert": "^2.0.0",
