--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/vision": "^1.11.0",
     "@material-ui/core": "^4.9.7",
     "antd": "^4.0.4",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
     "gitignore": "^0.6.0",
     "multer": "^1.4.2",
+    "path": "^0.12.7",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.1.2",
