--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.13.1",
     "schema": "^0.2.1",
     "truffle": "^5.1.19",
-    "uri-utils": "^1.0.4"
+    "uri-utils": "^1.0.4",
+    "web3": "^1.2.6"
   }
 }
